[package]
name = "legion-kb-rgb"
version = "0.20.7"
authors = ["4JX"]
edition = "2021"
homepage = "https://github.com/4JX/L5P-Keyboard-RGB"
license = "GPL-3.0"

[dependencies]
# Main driver
legion-rgb-driver = { path = "../driver" }
once_cell = "1.19"

# Cli
clap = { version = "4.5.37", features = ["color", "cargo", "derive"] }

# Ui
eframe = { version = "0.31.1" }
egui-modal = { git = "https://github.com/n00kii/egui-modal", rev = "74add2407bb945992bd15c79fcedc2af2ee0fb4a" }
egui_file = "0.22.1"
egui-notify = "0.19.0"
image = "0.25.6"
scrap = { git = "https://github.com/rustdesk/rustdesk", rev = "c626c24" }
fast_image_resize = "5.1.3"
photon-rs = { git = "https://github.com/silvia-odwyer/photon", rev = "b7e57c9", default-features = false }
device_query = "4.0.1"
rand = "0.9.1"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
color-eyre = "0.6.5"
sysinfo = "0.35.0"
crossbeam-channel = "0.5.15"
thiserror = "2.0.12"
single-instance = "0.3.3"
open = "5.3.2"
error-stack = "0.5.0"
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "processenv"] }
regex = "1.11.1"

# ⬇️ ⬇️ ⬇️ ✅ هذا هو الموقع الصحيح لـ tray-icon ⬇️ ⬇️ ⬇️
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = { version = "0.20.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = "0.20.1"
gtk = "0.18.2"

[build-dependencies]
winres = "0.1.12"

[features]
scrap-pkg-config = ["scrap/linux-pkg-config"]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "b12aa38"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { dependencies = ["libvpx", "libyuv", "aom"] }
x86_64-pc-windows-msvc = { dependencies = [
    "libvpx:x64-windows-static",
    "libyuv:x64-windows-static",
    "aom:x64-windows-static",
] }
